--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@mantine/core": "8.3.11",
     "@mantine/hooks": "8.3.11",
+    "@tanstack/react-query": "^5.90.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
