--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mantine/core": "8.3.11",
-    "@mantine/hooks": "8.3.11",
+    "@mantine/charts": "^8.3.12",
+    "@mantine/core": "^8.3.12",
+    "@mantine/hooks": "^8.3.12",
     "@tanstack/react-query": "^5.90.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
