--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/charts": "^8.3.12",
     "@mantine/core": "^8.3.12",
+    "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
     "@tanstack/react-query": "^5.90.16",
     "dayjs": "^1.11.19",
