--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@mantine/core": "^8.3.12",
     "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
+    "@mantine/notifications": "^8.3.12",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.16",
     "dayjs": "^1.11.19",
     "react": "^19.1.1",
